--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 <body>
   <!-- Header con logo y menú -->
   <header>
-    <img src="https://s11.aconvert.com/convert/p3r68-cdx67/3r3xh-vh9kn.jpg" alt="Logo de la Institución" class="logo">
+    <img src="https://s10.aconvert.com/convert/p3r68-cdx67/agy48-y2v56.jpg" alt="Logo de la Institución" class="logo">
     <nav>
       <a href="#home">Inicio</a>
       <a href="#sobre">Sobre Nosotros</a>
@@ -328,7 +328,7 @@
   <main>
     <!-- Layout 1: Hero con logo y foto de niños -->
     <section id="home">
-      <img src="logo.jpg" alt="Logo de la Institución" class="logo-grande">
+      <img src="https://s11.aconvert.com/convert/p3r68-cdx67/dekg2-kftx0.jpg" alt="Logo de la Institución" class="logo-grande">
       <h1>Institución Apapacho México IAP</h1>
       <p>Promoviendo la seguridad y educación de niños y adolescentes para transformar el futuro.</p>
       <button onclick="scrollToSection('contato')">Contáctanos</button>
