--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       background: linear-gradient(rgba(0, 74, 173, 0.7), rgba(0, 102, 255, 0.7)), url('https://images.unsplash.com/photo-1491895200221-4e7a2d4d0e0e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2074&q=80');
       background-size: cover;
       background-position: center;
-      color: gray;
+      color: white;
       text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
       position: relative;
     }
@@ -108,7 +108,7 @@
     }
 
     #home h1 {
-      color: purple;
+      color: white;
       font-size: 3rem;
       margin-bottom: 20px;
     }
