--- a/index.html
+++ b/index.html
@@ -677,9 +677,8 @@
             <div class="location-content">
                 <div class="location-info">
                     <p>Nuestro equipo trabaja directamente en las instituciones educativas y comunidades que requieren nuestros servicios de prevención.</p>
-                    <p><strong>Oficina central:</strong> Calle Prevención #123, Col. Seguridad, Ciudad de México</p>
-                    <p><strong>Teléfono:</strong> (55) 1234-5678</p>
-                    <p><strong>Email:</strong> info@novaapapacho.org</p>
+                    <p><strong>Teléfono:</strong> +52 722 289 8052</p>
+                    <p><strong>Correo:</strong> asociacionapapachomexicoiap@gmail.com</p>
                     <p><strong>Horario de atención:</strong> Lunes a Viernes de 9:00 am a 6:00 pm</p>
                     <a href="#contacto" class="btn">Solicita una Visita</a>
                 </div>
@@ -697,14 +696,12 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <p>¿Te interesa llevar nuestros programas a tu escuela o comunidad? Contáctanos para obtener más información.</p>
-                    <p><strong>Teléfono:</strong> (55) 1234-5678</p>
-                    <p><strong>Email:</strong> info@novaapapacho.org</p>
-                    <p><strong>Dirección:</strong> Calle Prevención #123, Col. Seguridad, Ciudad de México</p>
+                    <p><strong>Teléfono:</strong> +52 722 289 8052</p>
+                    <p><strong>Correo:</strong> asociacionapapachomexico@gmail.com</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="#"><i class="https://www.facebook.com/share/1F4QJFfvfo/?mibextid=wwXIfr"></i></a>
+                        <a href="#"><i class="https://www.instagram.com/asociacionapapacho?igsh=MWx2NWxiODcyM29tNA=="></i></a>
+                        <a href="#"><i class="https://youtube.com/@asociacionapapacho3048?feature=shared"></i></a>
                     </div>
                 </div>
                 <div class="contact-form">
@@ -763,13 +760,12 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contacto</h3>
-                    <p>Calle Prevención #123, Col. Seguridad, Ciudad de México</p>
-                    <p>Tel: (55) 1234-5678</p>
-                    <p>Email: info@novaapapacho.org</p>
+                    <p>Tel: +52 722 289 8052</p>
+                    <p>Correo: asociacionapapachomexicoiap@gmail.com</p>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 Nova Apapacho - Prevención de Violencia y Abuso Sexual. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Nova Apapacho - Prevención de Violencia y Abuso Sexual. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
