--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
     <!-- Hero Section -->
     <section id="inicio" class="hero">
         <div class="container">
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2Fp%2FAsociaci%25C3%25B3n-Apapacho-M%25C3%25A9xico-IAP-100063253959322%2F&psig=AOvVaw1pBO9nCNMFbeYjgFl7NGaA&ust=1758854939280000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCODH4rDz8o8DFQAAAAAdAAAAABAE" alt="Logo Nova Apapacho" class="large-logo">
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpt.vecteezy.com%2Ffotos-gratis%2Fcrian%25C3%25A7as-sorrindo&psig=AOvVaw0wGNxxQEQiL3cqch2WaA08&ust=1758855195379000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCLDtrq708o8DFQAAAAAdAAAAABAE" alt="Logo Nova Apapacho" class="large-logo">
             <h1>Nova Apapacho</h1>
             <p class="slogan">Creando entornos seguros para la niñez y adolescencia</p>
             <p>Programas educativos de prevención de violencia y abuso sexual para primaria, secundaria y preparatoria.</p>
