--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="https://s11.aconvert.com/convert/p3r68-cdx67/dekg2-kftx0.jpg" alt="Logo Nova Apapacho">
+                <img src="https://drive.google.com/file/d/1FLx4eliJLtOavM2IGOsZmOwzccuS0_Va/view?usp=sharing" alt="Logo Nova Apapacho">
                 <div class="logo-text">Nova Apapacho</div>
             </div>
             <div class="menu-toggle">
