--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="https://drive.google.com/file/d/1FLx4eliJLtOavM2IGOsZmOwzccuS0_Va/view?usp=sharing" alt="Logo Nova Apapacho">
+                <img src="/imagenes_pagina/logo2.png" alt="Logo Nova Apapacho">
                 <div class="logo-text">Nova Apapacho</div>
             </div>
             <div class="menu-toggle">
@@ -563,7 +563,7 @@
     <!-- Hero Section -->
     <section id="inicio" class="hero">
         <div class="container">
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpt.vecteezy.com%2Ffotos-gratis%2Fcrian%25C3%25A7as-sorrindo&psig=AOvVaw0wGNxxQEQiL3cqch2WaA08&ust=1758855195379000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCLDtrq708o8DFQAAAAAdAAAAABAE" alt="Logo Nova Apapacho" class="large-logo">
+            <img src="/imagenes_pagina/imagem1.png" alt="Logo Nova Apapacho" class="large-logo">
             <h1>Nova Apapacho</h1>
             <p class="slogan">Creando entornos seguros para la niñez y adolescencia</p>
             <p>Programas educativos de prevención de violencia y abuso sexual para primaria, secundaria y preparatoria.</p>
