--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
     <!-- Hero Section -->
     <section id="inicio" class="hero">
         <div class="container">
-            <img src="/imagenes_pagina/imagem1.png" alt="Logo Nova Apapacho" class="large-logo">
+            <img src="/imagenes_pagina/imagem1.png" alt="Logo Nova Apapacho" class="max-h-full max-w-full object-contain rounded-xl">
             <h1>Nova Apapacho</h1>
             <p class="slogan">Creando entornos seguros para la niñez y adolescencia</p>
             <p>Programas educativos de prevención de violencia y abuso sexual para primaria, secundaria y preparatoria.</p>
